--- a/snake/index.html
+++ b/snake/index.html
@@ -9,6 +9,9 @@
     <script src="../addons/p5.dom.min.js"></script>
     <script src="../addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
+    <script src="snake.js"></script>
+    <script src="apple.js"></script>
+
   </head>
   <body>
   </body>
