--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=snake/index.html" />
+<head><meta http-equiv="refresh" content="0; url=snake/index.html" /></head>
